2013-06-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Keep version strings clean when release class is unspecified.

	* Makefile.in (RC_SCRIPT, VERSION_SCRIPT): Simplify; assign specified
	release class to local variable; delegate release tag generation to...
	(TAG_SCRIPT): ...this; check release class variable is not an empty
	string, before inserting it into the generated release tag.

2013-06-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Rework defective assignment of product version resources.

	* Makefile.in (BUILD_TAG): Avoid creating an empty build.tag file.
	(PACKAGE_VERINFO_SCRIPT): Ensure that the build tag is generated as a
	string of non-zero length.  Do not assume that it comprises only two
	elements; extract the final two, as the third and fourth elements
	of the product version meta-data record.

2013-06-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Rework defective package build time-stamping logic.

	* Makefile.in (%.time): Make it explicitly touch its target; the
	2013-05-15 changes, to reduce redundancy, didn't work as expected.
	(%.tag): Add a side effect; make it also explicitly touch %.time.
	(%.tagged.time): This is now redundant; remove it.

2013-06-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Collect distributable package files in user specified directory.

	* Makefile.in (distdir): New macro; define default as abs_builddir.
	(srcdist, bindist, licdist): Use it; direct generated tarballs to it.
	(%.txt.dist): New pattern rule; define, and use it to make a copy...
	(readme.txt): ...of this, in distdir, when processing...
	(dist): ...this build objective.

2013-06-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Handle Microsoft's 32-bit vs. 64-bit time_t ambiguity.

	* src/apihook.c: New file; it provides...
	(have_api): ...this helper; it checks for availability of any specific
	API function, within a specific system DLL, (MSVCRT.DLL by default).
